





import java.util.List;
import java.util.ArrayList;

public class fsm_Machine  {






    private fsm_Model fsm_model;


    public fsm_Machine(
    ) {
    }



    public fsm_Model getFsm_model() {
        return fsm_model;
    }

    public void setFsm_model(fsm_Model fsm_model) {
        this.fsm_model = fsm_model;
    }

}