





import java.util.List;
import java.util.ArrayList;

public class fsm_Model  {

    private String name;



    public fsm_Model(
        String name    ) {
        this.name = name;
    }


    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }


}