





import java.util.List;
import java.util.ArrayList;

public class fsm_Transition  {

    private String event;





    private fsm_State fsm_state;




    private fsm_Machine fsm_machine;




    private fsm_State fsm_state;


    public fsm_Transition(
        String event    ) {
        this.event = event;
    }


    public String getEvent() {
        return event;
    }

    public void setEvent(String event) {
        this.event = event;
    }

    public fsm_State getFsm_state() {
        return fsm_state;
    }

    public void setFsm_state(fsm_State fsm_state) {
        this.fsm_state = fsm_state;
    }
    public fsm_Machine getFsm_machine() {
        return fsm_machine;
    }

    public void setFsm_machine(fsm_Machine fsm_machine) {
        this.fsm_machine = fsm_machine;
    }
    public fsm_State getFsm_state() {
        return fsm_state;
    }

    public void setFsm_state(fsm_State fsm_state) {
        this.fsm_state = fsm_state;
    }

}